修正规则，添加虾米音乐相关规则

--- a/Quantumult_media_only.conf
+++ b/Quantumult_media_only.conf
@@ -1,4 +1,4 @@
-# 2019年03月04日 14:06 UTC/GMT +9
+# 2019年04月02日 21:33 UTC/GMT +9
 
 #「设置」——「订阅」——「+」——「分流」，输入名字（随意，如"Stick Media Only"）
 # 填上链接地址，勾选个性化保存，保存找到选项，左滑选择「替换」，然后「保存」
@@ -67,7 +67,6 @@ DOMAIN-SUFFIX,ls.apple.com,DIRECT
 DOMAIN,m.yap.yahoo.com,REJECT
 DOMAIN,geo.yahoo.com,REJECT
 DOMAIN,doubleplay-conf-yql.media.yahoo.com,REJECT
-DOMAIN-SUFFIX,uservoice.com,REJECT
 DOMAIN,ws.progrss.yahoo.com,REJECT
 DOMAIN,onepush.query.yahoo.com,REJECT
 DOMAIN,locdrop.query.yahoo.com,REJECT
@@ -8286,6 +8285,10 @@ DOMAIN-SUFFIX,y.qq.com,PROXY
 DOMAIN,aqqmusic.tc.qq.com,PROXY
 // Tencent Video
 DOMAIN-SUFFIX,vv.video.qq.com,PROXY
+// Xiami Music
+USER-AGENT,xiami*,PROXY
+DOMAIN-SUFFIX,xiami.com,PROXY
+DOMAIN-SUFFIX,xiami.net,PROXY
 // Youku
 IP-CIDR,106.11.0.0/16,PROXY,no-resolve
 
@@ -9174,13 +9177,10 @@ DOMAIN-SUFFIX,51ym.me,DIRECT
 DOMAIN-SUFFIX,58.com,DIRECT
 DOMAIN-SUFFIX,8686c.com,DIRECT
 DOMAIN-SUFFIX,abercrombie.com,DIRECT
-DOMAIN-SUFFIX,acfun.tv,DIRECT
-DOMAIN-SUFFIX,acgvideo.com,DIRECT
 DOMAIN-SUFFIX,adobesc.com,DIRECT
 DOMAIN-SUFFIX,airtable.com,DIRECT
 DOMAIN-SUFFIX,air-matters.com,DIRECT
 DOMAIN-SUFFIX,air-matters.io,DIRECT
-DOMAIN-SUFFIX,aixifan.com,DIRECT
 DOMAIN-SUFFIX,akadns.net,DIRECT
 DOMAIN-SUFFIX,alicdn.com,DIRECT
 DOMAIN-SUFFIX,alipay.com,DIRECT
@@ -9200,8 +9200,6 @@ DOMAIN-SUFFIX,bet365.com,DIRECT
 DOMAIN-SUFFIX,bdimg.com,DIRECT
 DOMAIN-SUFFIX,bdstatic.com,DIRECT
 DOMAIN-SUFFIX,beatsbydre.com,DIRECT
-DOMAIN-SUFFIX,bilibili.cn,DIRECT
-DOMAIN-SUFFIX,bilibili.com,DIRECT
 DOMAIN-SUFFIX,blizzard.com,DIRECT
 DOMAIN-SUFFIX,battle.net,DIRECT
 DOMAIN-SUFFIX,caiyunapp.com,DIRECT
@@ -9254,7 +9252,6 @@ DOMAIN-SUFFIX,ifengimg.com,DIRECT
 DOMAIN-SUFFIX,images-amazon.com,DIRECT
 DOMAIN-SUFFIX,img4me.com,DIRECT
 DOMAIN-SUFFIX,ipip.net,DIRECT
-DOMAIN-SUFFIX,iqiyi.com,DIRECT
 DOMAIN-SUFFIX,ithome.com,DIRECT
 DOMAIN-SUFFIX,ixdzs.com,DIRECT
 DOMAIN-SUFFIX,jd.com,DIRECT
@@ -9305,8 +9302,6 @@ DOMAIN-SUFFIX,qingmang.me,DIRECT
 DOMAIN-SUFFIX,qingmang.mobi,DIRECT
 DOMAIN-SUFFIX,qiniucdn.com,DIRECT
 DOMAIN-SUFFIX,qiniudn.com,DIRECT
-DOMAIN-SUFFIX,qiyi.com,DIRECT
-DOMAIN-SUFFIX,qiyipic.com,DIRECT
 DOMAIN-SUFFIX,qq.com,DIRECT
 DOMAIN-SUFFIX,qqurl.com,DIRECT
 DOMAIN-SUFFIX,rarbg.to,DIRECT
@@ -9354,8 +9349,6 @@ DOMAIN-SUFFIX,weico.cc,DIRECT
 DOMAIN-SUFFIX,weiphone.com,DIRECT
 DOMAIN-SUFFIX,weiphone.net,DIRECT
 DOMAIN-SUFFIX,workflowy.com,DIRECT
-DOMAIN-SUFFIX,xiami.com,DIRECT
-DOMAIN-SUFFIX,xiami.net,DIRECT
 DOMAIN-SUFFIX,xiaojukeji.com,DIRECT
 DOMAIN-SUFFIX,xiaomi.com,DIRECT
 DOMAIN-SUFFIX,xiaomi.net,DIRECT
@@ -9372,7 +9365,6 @@ DOMAIN-SUFFIX,yinxiang.com,DIRECT
 DOMAIN-SUFFIX,yixia.com,DIRECT
 DOMAIN-SUFFIX,ykimg.com,DIRECT
 DOMAIN-SUFFIX,youdao.com,DIRECT
-DOMAIN-SUFFIX,youku.com,DIRECT
 DOMAIN-SUFFIX,yunjiasu-cdn.net,DIRECT
 DOMAIN-SUFFIX,zealer.com,DIRECT
 DOMAIN-SUFFIX,zgslb.net,DIRECT
@@ -9415,8 +9407,6 @@ IP-CIDR,172.0.0.0/12,DIRECT
 IP-CIDR,192.168.0.0/16,DIRECT
 IP-CIDR,192.168.1.0/16,DIRECT
 
-// Detect China network
-GEOIP,CN,DIRECT
 // Use DIRECT for all others
 FINAL,DIRECT
 
