--- a/QuantumultX/QuantumultX.conf
+++ b/QuantumultX/QuantumultX.conf
@@ -1,5 +1,5 @@
-; 该文件适用于 Quantumult X 1.0.0(37) 版本，因该工具处于测试阶段，无法保证其他版本完全适用。
-; 2019年06月19日 07:00 UTC/GMT +9
+; 该文件适用于 Quantumult X 1.0.0(50) 版本，因该工具尚处于测试阶段，不保证其他版本完全适用。
+; 2019年06月25日 02:42 UTC/GMT +9
 [general]
 server_check_url=http://www.gstatic.com/generate_204
 ;network_check_url=http://bing.com/
@@ -24,13 +24,13 @@ server=8.8.8.8
 ; 请自行在策略组添加需要加入的节点，亦可直接通过选择自带PROXY策略节点使用
 ; 其中 CMedia 策略组为中国媒体，GMedia 为国际媒体，Outside 为境外链接，Mainland 为大陆链接，Others 为最终规则
 static=AdBlack, reject, direct
-static=Apple, proxy, direct
-static=Netflix, proxy, direct
+static=Apple, Outside, direct
 static=CMedia, direct, proxy
-static=GMedia, proxy, direct
+static=GMedia, Outside, direct
+static=Netflix, Outside, direct
 static=Outside, proxy, direct
 static=Mainland, direct, proxy
-static=Others, proxy, direct
+static=Others, Outside, proxy, direct
 ; static policy points to the server in candidates you manually selected.
 ; available policy points to the first available server in candidates based on server_check_url(url latency test will be launched when the policy has been triggered).
 ; round-robbin policy points to the next server in candidates for next connection.
@@ -45,24 +45,28 @@ static=Others, proxy, direct
 
 
 [filter_remote]
-https://github.com/GeQ1an/Rules/raw/master/QuantumultX/QuantumultX.txt, tag=Stick Rules
+https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/AdBlack.list, tag=AdBlock (Stick Rules), enabled=true
+https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/Apple.list, tag=Apple (Stick Rules), enabled=true
+https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/CMedia.list, tag=CMedia (Stick Rules), enabled=true
+https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/GMedia.list, tag=GMedia (Stick Rules), enabled=true
+https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/Netflix.list, tag=Netflix (Stick Rules), enabled=true
+https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/Outside.list, tag=Outside (Stick Rules), enabled=true
+https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/Mainland.list, tag=Mainland (Stick Rules), enabled=true
+https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/LAN.list, tag=LAN (Stick Rules), enabled=true
+
+[rewrite_remote]
+http://cloudcompute.lbyczf.com/quanx-rewrite, tag=Rewrite (Fndroid), enabled=true
 
 [server_local]
 
 
 [filter_local]
-
+final, Others
 
 [rewrite_local]
-;^http://example\.com/resource1/1/ url reject
-;^http://example\.com/resource1/2/ url reject-img
-;^http://example\.com/resource1/3/ url reject-200
-;^http://example\.com/resource2/ url 302 http://example.com/new-resource2/
-;^http://example\.com/resource3/ url 307 http://example.com/new-resource3/
-;^http://example\.com/resource4/ url request-header (\r\n)User-Agent:.+(\r\n) request-header $1User-Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_11_1) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/71.0.3578.98 Safari/537.36$2
-;^http://example\.com/resource5/ url response-body "info":\[.+\],"others" response-body "info":[],"others"
+
 
 [mitm]
 ;passphrase =
 ;p12 =
-;hostname = *.example.com, *.sample.com
+hostname =
