--- a/QuantumultX/QuantumultX.conf
+++ b/QuantumultX/QuantumultX.conf
@@ -1,5 +1,5 @@
-; 该文件适用于 Quantumult X 1.0.0(50) 版本，因该工具尚处于测试阶段，不保证其他版本完全适用。
-; 2019年06月25日 02:42 UTC/GMT +9
+; 该文件适用于 Quantumult X 1.0.0(68) 版本，因该工具尚处于测试阶段，不保证其他版本完全适用。
+; 2019年07月07日 05:15 UTC/GMT +9
 [general]
 server_check_url=http://www.gstatic.com/generate_204
 ;network_check_url=http://bing.com/
@@ -9,10 +9,12 @@ server_check_url=http://www.gstatic.com/generate_204
 ;excluded_routes= 192.168.0.0/16, 172.16.0.0/12, 100.64.0.0/10, 10.0.0.0/8
 
 [dns]
-server=223.5.5.5
-server=114.114.114.114
-server=119.29.29.29
+
 server=8.8.8.8
+server=1.0.0.1
+server=114.114.114.114
+server=223.5.5.5
+server=119.29.29.29
 ;server=8.8.4.4:53
 ;server=/example1.com/8.8.4.4
 ;server=/*.example2.com/223.5.5.5
@@ -28,6 +30,7 @@ static=Apple, Outside, direct
 static=CMedia, direct, proxy
 static=GMedia, Outside, direct
 static=Netflix, Outside, direct
+static=YouTube, Outside, direct
 static=Outside, proxy, direct
 static=Mainland, direct, proxy
 static=Others, Outside, proxy, direct
@@ -50,6 +53,7 @@ https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/Apple.l
 https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/CMedia.list, tag=CMedia (Stick Rules), enabled=true
 https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/GMedia.list, tag=GMedia (Stick Rules), enabled=true
 https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/Netflix.list, tag=Netflix (Stick Rules), enabled=true
+https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/YouTube.list, tag=YouTube (Stick Rules), enabled=true
 https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/Outside.list, tag=Outside (Stick Rules), enabled=true
 https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/Mainland.list, tag=Mainland (Stick Rules), enabled=true
 https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/LAN.list, tag=LAN (Stick Rules), enabled=true
