--- a/QuantumultX/QuantumultX.conf
+++ b/QuantumultX/QuantumultX.conf
@@ -33,7 +33,7 @@ static=Netflix, Outside, direct
 static=YouTube, Outside, direct
 static=Outside, proxy, direct
 static=Mainland, direct, proxy
-static=Others, Outside, proxy, direct
+static=Others, Outside, direct
 ; static policy points to the server in candidates you manually selected.
 ; available policy points to the first available server in candidates based on server_check_url(url latency test will be launched when the policy has been triggered).
 ; round-robbin policy points to the next server in candidates for next connection.
