--- a/QuantumultX/QuantumultX.conf
+++ b/QuantumultX/QuantumultX.conf
@@ -1,5 +1,5 @@
-; 该文件适用于 Quantumult X 1.0.0(68) 版本，因该工具尚处于测试阶段，不保证其他版本完全适用。
-; 2019年07月07日 05:16 UTC/GMT +9
+; 该文件适用于 Quantumult X 1.0.0(92) 版本，因该工具尚处于测试阶段，不保证其他版本完全适用。
+; 2019年08月15日 09:32 UTC/GMT +9
 [general]
 server_check_url=http://www.gstatic.com/generate_204
 ;network_check_url=http://bing.com/
@@ -22,9 +22,9 @@ server=119.29.29.29
 ;address=/example6.com/[2001:8d3:8d3:8d3:8d3:8d3:8d3:8d3]
 
 [policy]
-; 请自行在策略组添加需要加入的节点，亦可直接通过选择自带PROXY策略节点使用
+; 请自行在策略组添加需要加入的节点，亦可直接通过选择自带 PROXY 策略节点使用
 ; 其中 CMedia 策略组为中国媒体，GMedia 为国际媒体，Outside 为境外链接，Mainland 为大陆链接，Others 为最终规则
-static=AdBlack, reject, direct
+static=AdBlock, reject, direct
 static=Apple, Outside, direct
 static=CMedia, direct, proxy
 static=GMedia, Outside, direct
@@ -47,14 +47,14 @@ static=Others, Outside, direct
 
 
 [filter_remote]
-https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/AdBlack.list, tag=AdBlock (Stick Rules), enabled=true
-https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/Apple.list, tag=Apple (Stick Rules), enabled=true
-https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/CMedia.list, tag=CMedia (Stick Rules), enabled=true
-https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/GMedia.list, tag=GMedia (Stick Rules), enabled=true
-https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/Netflix.list, tag=Netflix (Stick Rules), enabled=true
-https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/YouTube.list, tag=YouTube (Stick Rules), enabled=true
-https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/Outside.list, tag=Outside (Stick Rules), enabled=true
-https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/Mainland.list, tag=Mainland (Stick Rules), enabled=true
+https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/AdBlock.list, tag=AdBlock (Stick Rules), force-policy=AdBlock, enabled=true
+https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/Apple.list, tag=Apple (Stick Rules), force-policy=Apple, enabled=true
+https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/CMedia.list, tag=CMedia (Stick Rules), force-policy=CMedia, enabled=true
+https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/GMedia.list, tag=GMedia (Stick Rules), force-policy=GMedia, enabled=true
+https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/Netflix.list, tag=Netflix (Stick Rules), force-policy=Netflix, enabled=true
+https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/YouTube.list, tag=YouTube (Stick Rules), force-policy=YouTube, enabled=true
+https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/Outside.list, tag=Outside (Stick Rules), force-policy=Outside, enabled=true
+https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/Mainland.list, tag=Mainland (Stick Rules), force-policy=Mainland, enabled=true
 https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/LAN.list, tag=LAN (Stick Rules), enabled=true
 
 [rewrite_remote]
