--- a/QuantumultX/QuantumultX.conf
+++ b/QuantumultX/QuantumultX.conf
@@ -1,10 +1,10 @@
-; 该文件适用于 Quantumult X 1.0.0(92) 版本，因该工具尚处于测试阶段，不保证其他版本完全适用。
-; 2019年08月15日 09:32 UTC/GMT +9
+; 该文件基于 Quantumult X 1.0.0(97) 版本制作，因该工具尚处于测试阶段，不保证其他版本完全适用。
+; 2019年08月23日 18:32 UTC/GMT +9
 [general]
 server_check_url=http://www.gstatic.com/generate_204
-;network_check_url=http://bing.com/
+network_check_url=http://bing.com/
 ;dns_exclusion_list=*.qq.com, qq.com
-;ssid_suspended_list=LINK_22E174, LINK_22E175
+;ssid_suspended_list=Sophisticated, Sophisticated
 ;udp_whitelist=53, 123, 1900, 80-443
 ;excluded_routes= 192.168.0.0/16, 172.16.0.0/12, 100.64.0.0/10, 10.0.0.0/8
 
@@ -31,12 +31,13 @@ static=GMedia, Outside, direct
 static=Netflix, Outside, direct
 static=YouTube, Outside, direct
 static=Outside, proxy, direct
+static=PayPal, Outside, direct
 static=Mainland, direct, proxy
 static=Others, Outside, direct
-; static policy points to the server in candidates you manually selected.
-; available policy points to the first available server in candidates based on server_check_url(url latency test will be launched when the policy has been triggered).
-; round-robbin policy points to the next server in candidates for next connection.
-; ssid policy points to the server depending on the network environment.
+; static 策略是静态策略，需要手动选择节点
+; available 策略是可用性策略，将会自动使用策略组内第一个可联通的节点（在触发策略时启动 URL 测试）
+; round-robbin 策略是负载均衡策略，会轮询对每个节点进行测试，下一个链接使用最优节点（不推荐使用，可能出现 IP 频繁变动，导致风险）
+; ssid 策略是适用于 WiFi SSID 激活的策略（如家里的 WiFi 网络本身就有翻墙，可以设置连接该 WiFi 时全局使用直连）
 ;
 ;static=policy-name-1, Sample-A, Sample-B, Sample-C
 ;available=policy-name-2, Sample-A, Sample-B, Sample-C
@@ -47,14 +48,15 @@ static=Others, Outside, direct
 
 
 [filter_remote]
-https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/AdBlock.list, tag=AdBlock (Stick Rules), force-policy=AdBlock, enabled=true
-https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/Apple.list, tag=Apple (Stick Rules), force-policy=Apple, enabled=true
-https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/CMedia.list, tag=CMedia (Stick Rules), force-policy=CMedia, enabled=true
-https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/GMedia.list, tag=GMedia (Stick Rules), force-policy=GMedia, enabled=true
-https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/Netflix.list, tag=Netflix (Stick Rules), force-policy=Netflix, enabled=true
-https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/YouTube.list, tag=YouTube (Stick Rules), force-policy=YouTube, enabled=true
-https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/Outside.list, tag=Outside (Stick Rules), force-policy=Outside, enabled=true
-https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/Mainland.list, tag=Mainland (Stick Rules), force-policy=Mainland, enabled=true
+https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/AdBlock.list, tag=AdBlock (Stick Rules), enabled=true
+https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/Apple.list, tag=Apple (Stick Rules), enabled=true
+https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/CMedia.list, tag=CMedia (Stick Rules), enabled=true
+https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/GMedia.list, tag=GMedia (Stick Rules), enabled=true
+https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/Netflix.list, tag=Netflix (Stick Rules), enabled=true
+https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/YouTube.list, tag=YouTube (Stick Rules), enabled=true
+https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/Outside.list, tag=Outside (Stick Rules), enabled=true
+https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/PayPal.list, tag=PayPal (Stick Rules), enabled=true
+https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/Mainland.list, tag=Mainland (Stick Rules), enabled=true
 https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/LAN.list, tag=LAN (Stick Rules), enabled=true
 
 [rewrite_remote]
