--- a/QuantumultX/QuantumultX.conf
+++ b/QuantumultX/QuantumultX.conf
@@ -1,5 +1,5 @@
-; 该文件基于 Quantumult X 1.0.0(97) 版本制作，因该工具尚处于测试阶段，不保证其他版本完全适用。
-; 2019年08月23日 18:32 UTC/GMT +9
+; 该文件基于 Quantumult X 1.0.0(106) 版本制作，因该工具尚处于测试阶段，不保证其他版本完全适用。
+; 2019年08月29日 20:18 UTC/GMT +9
 [general]
 server_check_url=http://www.gstatic.com/generate_204
 network_check_url=http://bing.com/
@@ -24,16 +24,18 @@ server=119.29.29.29
 [policy]
 ; 请自行在策略组添加需要加入的节点，亦可直接通过选择自带 PROXY 策略节点使用
 ; 其中 CMedia 策略组为中国媒体，GMedia 为国际媒体，Outside 为境外链接，Mainland 为大陆链接，Others 为最终规则
-static=AdBlock, reject, direct
-static=Apple, Outside, direct
-static=CMedia, direct, proxy
-static=GMedia, Outside, direct
-static=Netflix, Outside, direct
-static=YouTube, Outside, direct
-static=Outside, proxy, direct
-static=PayPal, Outside, direct
-static=Mainland, direct, proxy
-static=Others, Outside, direct
+static=AdBlock, reject, direct, img-url=https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/IconSet/AdBlock.png
+static=Apple, Outside, direct, img-url=https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/IconSet/Apple.png
+static=CMedia, direct, proxy, img-url=https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/IconSet/CMedia.png
+static=GMedia, Outside, direct, img-url=https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/IconSet/GMedia.png
+static=Netflix, Outside, direct, img-url=https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/IconSet/Netflix.png
+static=YouTube, Outside, direct, img-url=https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/IconSet/YouTube.png
+static=TikTok, Outside, direct, img-url=https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/IconSet/TikTok.png
+static=PayPal, Outside, direct, img-url=https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/IconSet/PayPal.png
+static=Outside, proxy, direct, img-url=https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/IconSet/Outside.png
+static=Mainland, direct, proxy, img-url=https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/IconSet/Mainland.png
+static=Speedtest, Outside, direct, img-url=https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/IconSet/Speedtest.png
+static=Others, Outside, direct, img-url=https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/IconSet/Others.png
 ; static 策略是静态策略，需要手动选择节点
 ; available 策略是可用性策略，将会自动使用策略组内第一个可联通的节点（在触发策略时启动 URL 测试）
 ; round-robbin 策略是负载均衡策略，会轮询对每个节点进行测试，下一个链接使用最优节点（不推荐使用，可能出现 IP 频繁变动，导致风险）
@@ -54,9 +56,11 @@ https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/CMedia.
 https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/GMedia.list, tag=GMedia (Stick Rules), enabled=true
 https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/Netflix.list, tag=Netflix (Stick Rules), enabled=true
 https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/YouTube.list, tag=YouTube (Stick Rules), enabled=true
-https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/Outside.list, tag=Outside (Stick Rules), enabled=true
+https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/TikTok.list, tag=TikTok (Stick Rules), enabled=true
 https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/PayPal.list, tag=PayPal (Stick Rules), enabled=true
+https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/Outside.list, tag=Outside (Stick Rules), enabled=true
 https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/Mainland.list, tag=Mainland (Stick Rules), enabled=true
+https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/Speedtest.list, tag=Speedtest (Stick Rules), enabled=true
 https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/LAN.list, tag=LAN (Stick Rules), enabled=true
 
 [rewrite_remote]
@@ -69,9 +73,9 @@ http://cloudcompute.lbyczf.com/quanx-rewrite, tag=Rewrite (Fndroid), enabled=tru
 final, Others
 
 [rewrite_local]
-
+(?<=(carrier|account|sys)_region=)CN url 307 KR
 
 [mitm]
 ;passphrase =
 ;p12 =
-hostname =
+hostname = api*.tiktokv.com, api*.musical.ly, api*.amemv.com, aweme*.snssdk.com
