--- a/QuantumultX/QuantumultX.conf
+++ b/QuantumultX/QuantumultX.conf
@@ -1,8 +1,10 @@
-; 该文件基于 Quantumult X 1.0.0(106) 版本制作，因该工具尚处于测试阶段，不保证其他版本完全适用。
-; 2019年08月20日 22:04 UTC/GMT +9
+; 该文件基于 Quantumult X 1.0.0(107) 版本制作，因该工具尚处于测试阶段，不保证其他版本完全适用。
+; 2019年08月31日 22:44 UTC/GMT +9
 [general]
 server_check_url=http://www.gstatic.com/generate_204
 network_check_url=http://bing.com/
+;geo_location_checker=http://ip-api.com/json/?lang=zh-CN, https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/IP_API.js
+; 如需识别节点为中文和显示国旗，请取消上面 geo_location_checker 前的 ; 备注
 ;dns_exclusion_list=*.qq.com, qq.com
 ;ssid_suspended_list=Sophisticated, Sophisticated
 ;udp_whitelist=53, 123, 1900, 80-443
