--- a/QuantumultX/QuantumultX.conf
+++ b/QuantumultX/QuantumultX.conf
@@ -1,5 +1,5 @@
-; 该文件基于 Quantumult X 1.0.0(107) 版本制作，因该工具尚处于测试阶段，不保证其他版本完全适用。
-; 2019年08月31日 22:44 UTC/GMT +9
+; 该文件基于 Quantumult X 1.0.0(108) 版本制作，因该工具尚处于测试阶段，不保证其他版本完全适用。
+; 2019年09月09日 23:13 UTC/GMT +9
 [general]
 server_check_url=http://www.gstatic.com/generate_204
 network_check_url=http://bing.com/
@@ -66,7 +66,8 @@ https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/Speedte
 https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/LAN.list, tag=LAN (Stick Rules), enabled=true
 
 [rewrite_remote]
-http://cloudcompute.lbyczf.com/quanx-rewrite, tag=Rewrite (Fndroid), enabled=true
+https://raw.githubusercontent.com/ConnersHua/Profiles/master/Quantumult/X/Rewrite.conf, tag=Rewrite (ConnersHua), enabled=true
+http://cloudcompute.lbyczf.com/quanx-rewrite, tag=Rewrite (lhie1), enabled=false
 
 [server_local]
 
