--- a/QuantumultX/QuantumultX.conf
+++ b/QuantumultX/QuantumultX.conf
@@ -1,5 +1,5 @@
-; 该文件基于 Quantumult X 1.0.0(108) 版本制作，因该工具尚处于测试阶段，不保证其他版本完全适用。
-; 2019年09月09日 23:13 UTC/GMT +9
+; 该文件基于 Quantumult X 1.0.0(113) 版本制作，因该工具尚处于测试阶段，不保证其他版本完全适用。
+; 2019年09月19日 19:03 UTC/GMT +9
 [general]
 server_check_url=http://www.gstatic.com/generate_204
 network_check_url=http://bing.com/
@@ -79,6 +79,7 @@ final, Others
 (?<=(carrier|account|sys)_region=)CN url 307 KR
 
 [mitm]
-;passphrase =
-;p12 =
+; 请在正式使用前生成并信任证书，或使用其他已信任证书
+passphrase =
+p12 =
 hostname = api*.tiktokv.com, api*.musical.ly, api*.amemv.com, aweme*.snssdk.com
