--- a/Clash_by_Stick.yaml
+++ b/Clash_by_Stick.yaml
@@ -1,4 +1,4 @@
-# 2019年03月04日 14:25 UTC/GMT +9
+# 2019年09月21日 20:34 UTC/GMT +9
 
 # 配置文件需要放置在 $HOME/.config/clash/config.yml
 
@@ -8,14 +8,17 @@ port: 8888
 # SOCKS5 代理端口
 socks-port: 8889
 
+# Linux 和 macOS 的 redir 代理端口 (如需使用此功能，请取消注释)
+# redir-port: 8890
+
 # 允许局域网的连接（可用来共享代理）
 allow-lan: false
 
 # 规则模式：Rule（规则） / Global（全局代理）/ Direct（全局直连）
 mode: Rule
 
-# 设置日志输出级别 (默认级别：info，级别越高日志输出量越大，越倾向于调试)
-# 四个级别：info / warning / error / debug
+# 设置日志输出级别 (默认级别：info）。
+# 5 个级别：silent / info / warning / error / debug。silent，即不输出任何内容,级别越高日志输出量越大，越倾向于调试，若需要请自行开启。
 log-level: info
 
 # clash 的 RESTful API
@@ -38,7 +41,8 @@ dns:
      
   fallback: # 与 nameserver 内的服务器列表同时发起请求，当规则符合 GEOIP 在 CN 以外时，fallback 列表内的域名服务器生效。
      - tls://dns.rubyfish.cn:853
-     - tls://dns.google
+     - tls://1.0.0.1:853
+     - tls://dns.google:853
 
 # clash DNS 请求逻辑：
 # (1) 当访问一个域名时， nameserver 与 fallback 列表内的所有服务器并发请求，得到域名对应的 IP 地址。
@@ -86,49 +90,55 @@ Proxy:
   cipher: auto
 
 Proxy Group:
-# 按照下方格式写入策略组，其中 Domestic 和 China_media 为回国策略(可以仅代理媒体），请将大陆节点填入
+# 按照下方格式写入策略组，其中 Domestic 和 CMedia 为回国策略(可以仅代理媒体），请将大陆节点填入
 - name: Auto
   type: url-test
   proxies:
   - "hk1"
   - "hk2"
   - "us1"
-  url: http://captive.apple.com
-  interval: "600"
-- name: Fallback
-  type: fallback
-  proxies:
-  - "hk1"
-  - "hk2"
-  - "us1"
-  url: http://captive.apple.com
+  url: http://www.gstatic.com/generate_204
   interval: "600"
 - name: Proxy
   type: select
   proxies:
   - Auto
   - DIRECT
-  - Fallback
   - "hk1"
   - "hk2"
   - "us1"
+- name: Apple
+  type: select
+  proxies:
+  - Proxy
+  - DIRECT
+- name: CMedia
+  type: select
+  proxies:
+  - DIRECT
+  - "cn1"
+  - "cn2"
+- name: GMedia
+  type: select
+  proxies:
+  - Proxy
+  - DIRECT
+- name: Netflix
+  type: select
+  proxies:
+  - Proxy
+  - DIRECT
+- name: YouTube
+  type: select
+  proxies:
+  - Proxy
+  - DIRECT
 - name: Domestic
   type: select
   proxies:
   - DIRECT
   - "cn1"
   - "cn2"
-- name: China_media
-  type: select
-  proxies:
-  - DIRECT
-  - "cn1"
-  - "cn2"
-- name: Global_media
-  type: select
-  proxies:
-  - Proxy
-  - DIRECT
 - name: Others
   type: select
   proxies:
@@ -137,120 +147,147 @@ Proxy Group:
 
 Rule:
 # Apple
-- DOMAIN,beta.itunes.apple.com,Proxy
-- DOMAIN,gs.apple.com,Proxy
-- DOMAIN,hls.itunes.apple.com,Proxy
-- DOMAIN,itunes.apple.com,Proxy
-- DOMAIN-SUFFIX,aaplimg.com,DIRECT
-- DOMAIN-SUFFIX,akadns.net,DIRECT
-- DOMAIN-SUFFIX,apple.com,DIRECT
-- DOMAIN-SUFFIX,cdn-apple.com,DIRECT
-- DOMAIN-SUFFIX,icloud.com,DIRECT
-- DOMAIN-SUFFIX,icloud-content.com,DIRECT
-- DOMAIN-SUFFIX,mzstatic.com,DIRECT
+- DOMAIN,beta.itunes.apple.com,Apple
+- DOMAIN,gs.apple.com,Apple
+- DOMAIN,hls.itunes.apple.com,Apple
+- DOMAIN,itunes.apple.com,Apple
+- DOMAIN-SUFFIX,aaplimg.com,Apple
+- DOMAIN-SUFFIX,akadns.net,Apple
+- DOMAIN-SUFFIX,apple.com,Apple
+- DOMAIN-SUFFIX,apple-cloudkit.com,Apple
+- DOMAIN-SUFFIX,cdn-apple.com,Apple
+- DOMAIN-SUFFIX,icloud.com,Apple
+- DOMAIN-SUFFIX,icloud-content.com,Apple
+- DOMAIN-SUFFIX,mzstatic.com,Apple
 
 #- DOMAIN,e.crashlytics.com,REJECT //注释此选项有助于大多数App开发者分析崩溃信息；如果您拒绝一切崩溃数据统计、搜集，请取消 # 注释
 
-# China Media（中国媒体）
+# CMedia（中国媒体）
 # AcFun
-- DOMAIN-SUFFIX,acfun.cn,China_media
-- DOMAIN-SUFFIX,acfun.com,China_media
-- DOMAIN-SUFFIX,acfun.tv,China_media
-- DOMAIN-SUFFIX,aixifan.com,China_media
+- DOMAIN-SUFFIX,acfun.cn,CMedia
+- DOMAIN-SUFFIX,acfun.com,CMedia
+- DOMAIN-SUFFIX,acfun.tv,CMedia
+- DOMAIN-SUFFIX,aixifan.com,CMedia
 # bilibili
-- DOMAIN-KEYWORD,bilibili,China_media
-- DOMAIN-SUFFIX,acgvideo.com,China_media
-- DOMAIN-SUFFIX,hdslb.com,China_media
+- DOMAIN-KEYWORD,bilibili,CMedia
+- DOMAIN-SUFFIX,acgvideo.com,CMedia
+- DOMAIN-SUFFIX,hdslb.com,CMedia
 # MGTV
-- DOMAIN-SUFFIX,hunantv.com,China_media
-- DOMAIN-SUFFIX,mgtv.com,China_media
+- DOMAIN-SUFFIX,hunantv.com,CMedia
+- DOMAIN-SUFFIX,mgtv.com,CMedia
 # IQIYI
-- DOMAIN-SUFFIX,iqiyi.com,China_media
-- DOMAIN-SUFFIX,iqiyipic.com,China_media
-- DOMAIN-SUFFIX,qy.net,China_media
-- DOMAIN-SUFFIX,71.am,China_media
-- IP-CIDR,101.227.0.0/16,China_media,no-resolve
-- IP-CIDR,101.224.0.0/13,China_media,no-resolve
-- IP-CIDR,119.176.0.0/12,China_media,no-resolve
+- DOMAIN-SUFFIX,iqiyi.com,CMedia
+- DOMAIN-SUFFIX,iqiyipic.com,CMedia
+- DOMAIN-SUFFIX,qy.net,CMedia
+- DOMAIN-SUFFIX,71.am,CMedia
+- IP-CIDR,101.227.0.0/16,CMedia
+- IP-CIDR,101.224.0.0/13,CMedia
+- IP-CIDR,119.176.0.0/12,CMedia
+# Kugou & Kuwo
+- DOMAIN-SUFFIX,kugou.com,CMedia
+- DOMAIN-SUFFIX,kuwo.cn,CMedia
+- DOMAIN-SUFFIX,koowo.com,CMedia
 # Letv
-- DOMAIN-SUFFIX,api.mob.app.letv.com,China_media
-# MytvSUPER
-- DOMAIN-KEYWORD,nowtv100,China_media
-- DOMAIN-KEYWORD,rthklive,China_media
-- DOMAIN-SUFFIX,mytvsuper.com,China_media
-- DOMAIN-SUFFIX,tvb.com,China_media
+- DOMAIN-SUFFIX,api.mob.app.letv.com,CMedia
+- DOMAIN-SUFFIX,letv.com,CMedia
+# MGTV
+- DOMAIN-SUFFIX,hunantv.com,CMedia
+- DOMAIN-SUFFIX,mgtv.com,CMedia
 # NeteaseMusic
-- DOMAIN-SUFFIX,music.126.net,China_media
-- DOMAIN-SUFFIX,music.163.com,China_media
+- DOMAIN-SUFFIX,music.126.net,CMedia
+- DOMAIN-SUFFIX,music.163.com,CMedia
 # QQMusic
-- DOMAIN-SUFFIX,music.qq.com,China_media
-- DOMAIN-SUFFIX,y.qq.com,China_media
-- DOMAIN,aqqmusic.tc.qq.com,China_media
+- DOMAIN-SUFFIX,music.qq.com,CMedia
+- DOMAIN-SUFFIX,y.qq.com,CMedia
+- DOMAIN,aqqmusic.tc.qq.com,CMedia
 # Tencent Video
-- DOMAIN-SUFFIX,vv.video.qq.com,China_media
+- DOMAIN-SUFFIX,video.qq.com,CMedia
+# Xiami Music
+- DOMAIN-SUFFIX,xiami.com,CMedia
+- DOMAIN-SUFFIX,xiami.net,CMedia
 # Youku
-- IP-CIDR,106.11.0.0/16,China_media
-# 因虾米音乐无IP限制，故不添加到China_media策略组内
+- DOMAIN-SUFFIX,soku.com,CMedia
+- DOMAIN-SUFFIX,youku.com,CMedia
+- DOMAIN-SUFFIX,ykimg.com,CMedia
+- IP-CIDR,106.11.0.0/16,CMedia
 
 # Global Media（国际媒体）
-- DOMAIN-SUFFIX,edgedatg.com,Global_media
-- DOMAIN-SUFFIX,go.com,Global_media
-- DOMAIN,linear-abematv.akamaized.net,Global_media
-- DOMAIN-SUFFIX,abema.io,Global_media
-- DOMAIN-SUFFIX,abema.tv,Global_media
-- DOMAIN-SUFFIX,akamaized.net,Global_media
-- DOMAIN-SUFFIX,ameba.jp,Global_media
-- DOMAIN-SUFFIX,hayabusa.io,Global_media
-- DOMAIN-SUFFIX,amazonaws.com,Global_media
-- DOMAIN-SUFFIX,bahamut.com.tw,Global_media
-- DOMAIN-SUFFIX,gamer.com.tw,Global_media
-- DOMAIN-SUFFIX,hinet.net,Global_media
-- DOMAIN-KEYWORD,bbcfmt,Global_media
-- DOMAIN-KEYWORD,co.uk,Global_media
-- DOMAIN-KEYWORD,uk-live,Global_media
-- DOMAIN-SUFFIX,bbc.co,Global_media
-- DOMAIN-SUFFIX,bbc.co.uk,Global_media
-- DOMAIN-SUFFIX,bbc.com,Global_media
-- DOMAIN-SUFFIX,bbci.co,Global_media
-- DOMAIN-SUFFIX,bbci.co.uk,Global_media
-- DOMAIN-SUFFIX,chocotv.com.tw,Global_media
-- DOMAIN-KEYWORD,epicgames,Global_media
-- DOMAIN-SUFFIX,helpshift.com,Global_media
-- DOMAIN-KEYWORD,foxplus,Global_media
-- DOMAIN-SUFFIX,config.fox.com,Global_media
-- DOMAIN-SUFFIX,emome.net,Global_media
-- DOMAIN-SUFFIX,fox.com,Global_media
-- DOMAIN-SUFFIX,foxdcg.com,Global_media
-- DOMAIN-SUFFIX,foxnow.com,Global_media
-- DOMAIN-SUFFIX,foxplus.com,Global_media
-- DOMAIN-SUFFIX,foxplay.com,Global_media
-- DOMAIN-SUFFIX,ipinfo.io,Global_media
-- DOMAIN-SUFFIX,mstage.io,Global_media
-- DOMAIN-SUFFIX,now.com,Global_media
-- DOMAIN-SUFFIX,theplatform.com,Global_media
-- DOMAIN-SUFFIX,hbo.com,Global_media
-- DOMAIN-SUFFIX,hbogo.com,Global_media
-- DOMAIN-SUFFIX,hbogoasia.hk,Global_media
-- DOMAIN-SUFFIX,happyon.jp,Global_media
-- DOMAIN-SUFFIX,hulu.com,Global_media
-- DOMAIN-SUFFIX,huluim.com,Global_media
-- DOMAIN-SUFFIX,imkan.tv,Global_media
-- DOMAIN-SUFFIX,joox.com,Global_media
-- DOMAIN-SUFFIX,netflix.com,Global_media
-- DOMAIN-SUFFIX,netflix.net,Global_media
-- DOMAIN-SUFFIX,nflxext.com,Global_media
-- DOMAIN-SUFFIX,nflximg.com,Global_media
-- DOMAIN-SUFFIX,nflximg.net,Global_media
-- DOMAIN-SUFFIX,nflxso.net,Global_media
-- DOMAIN-SUFFIX,nflxvideo.net,Global_media
-- DOMAIN-KEYWORD,spotify,Global_media
-- DOMAIN-SUFFIX,scdn.co,Global_media
-- DOMAIN-SUFFIX,spoti.fi,Global_media
-- DOMAIN-SUFFIX,viu.tv,Global_media
-- DOMAIN-KEYWORD,youtube,Global_media
-- DOMAIN-SUFFIX,googlevideo.com,Global_media
-- DOMAIN-SUFFIX,gvt2.com,Global_media
-- DOMAIN-SUFFIX,youtu.be,Global_media
+- DOMAIN-SUFFIX,edgedatg.com,GMedia
+- DOMAIN-SUFFIX,go.com,GMedia
+- DOMAIN,linear-abematv.akamaized.net,GMedia
+- DOMAIN-SUFFIX,abema.io,GMedia
+- DOMAIN-SUFFIX,abema.tv,GMedia
+- DOMAIN-SUFFIX,akamaized.net,GMedia
+- DOMAIN-SUFFIX,ameba.jp,GMedia
+- DOMAIN-SUFFIX,hayabusa.io,GMedia
+- DOMAIN-SUFFIX,amazonaws.com,GMedia
+- DOMAIN-SUFFIX,bahamut.com.tw,GMedia
+- DOMAIN-SUFFIX,gamer.com.tw,GMedia
+- DOMAIN-SUFFIX,hinet.net,GMedia
+- DOMAIN-KEYWORD,bbcfmt,GMedia
+- DOMAIN-KEYWORD,co.uk,GMedia
+- DOMAIN-KEYWORD,uk-live,GMedia
+- DOMAIN-SUFFIX,bbc.co,GMedia
+- DOMAIN-SUFFIX,bbc.co.uk,GMedia
+- DOMAIN-SUFFIX,bbc.com,GMedia
+- DOMAIN-SUFFIX,bbci.co,GMedia
+- DOMAIN-SUFFIX,bbci.co.uk,GMedia
+- DOMAIN-SUFFIX,chocotv.com.tw,GMedia
+- DOMAIN-KEYWORD,epicgames,GMedia
+- DOMAIN-SUFFIX,helpshift.com,GMedia
+- DOMAIN-KEYWORD,foxplus,GMedia
+- DOMAIN-SUFFIX,config.fox.com,GMedia
+- DOMAIN-SUFFIX,emome.net,GMedia
+- DOMAIN-SUFFIX,fox.com,GMedia
+- DOMAIN-SUFFIX,foxdcg.com,GMedia
+- DOMAIN-SUFFIX,foxnow.com,GMedia
+- DOMAIN-SUFFIX,foxplus.com,GMedia
+- DOMAIN-SUFFIX,foxplay.com,GMedia
+- DOMAIN-SUFFIX,ipinfo.io,GMedia
+- DOMAIN-SUFFIX,mstage.io,GMedia
+- DOMAIN-SUFFIX,now.com,GMedia
+- DOMAIN-SUFFIX,theplatform.com,GMedia
+- DOMAIN-SUFFIX,hbo.com,GMedia
+- DOMAIN-SUFFIX,hbogo.com,GMedia
+- DOMAIN-SUFFIX,hbogoasia.hk,GMedia
+- DOMAIN-SUFFIX,happyon.jp,GMedia
+- DOMAIN-SUFFIX,hulu.com,GMedia
+- DOMAIN-SUFFIX,huluim.com,GMedia
+- DOMAIN-SUFFIX,imkan.tv,GMedia
+- DOMAIN-SUFFIX,joox.com,GMedia
+- DOMAIN-KEYWORD,nowtv100,GMedia
+- DOMAIN-KEYWORD,rthklive,GMedia
+- DOMAIN-SUFFIX,mytvsuper.com,GMedia
+- DOMAIN-SUFFIX,tvb.com,GMedia
+- DOMAIN-KEYWORD,spotify,GMedia
+- DOMAIN-SUFFIX,scdn.co,GMedia
+- DOMAIN-SUFFIX,spoti.fi,GMedia
+- DOMAIN-SUFFIX,viu.tv,GMedia
+
+# Netflix
+- DOMAIN-SUFFIX,netflix.com,Netflix
+- DOMAIN-SUFFIX,netflix.net,Netflix
+- DOMAIN-SUFFIX,nflxext.com,Netflix
+- DOMAIN-SUFFIX,nflximg.com,Netflix
+- DOMAIN-SUFFIX,nflximg.net,Netflix
+- DOMAIN-SUFFIX,nflxso.net,Netflix
+- DOMAIN-SUFFIX,nflxvideo.net,Netflix
+- IP-CIDR,23.246.0.0/18,Netflix
+- IP-CIDR,37.77.184.0/21,Netflix
+- IP-CIDR,45.57.0.0/17,Netflix
+- IP-CIDR,64.120.128.0/17,Netflix
+- IP-CIDR,66.197.128.0/17,Netflix
+- IP-CIDR,108.175.32.0/20,Netflix
+- IP-CIDR,192.173.64.0/18,Netflix
+- IP-CIDR,198.38.96.0/19,Netflix
+- IP-CIDR,198.45.48.0/20,Netflix
+
+# YouTube
+- DOMAIN-KEYWORD,youtube,YouTube
+- DOMAIN-SUFFIX,googlevideo.com,YouTube
+- DOMAIN-SUFFIX,gvt2.com,YouTube
+- DOMAIN-SUFFIX,youtu.be,YouTube
+- DOMAIN,youtubei.googleapis.com,YouTube
 
 # Domestic（中国网站）
 - DOMAIN-SUFFIX,cn,Domestic
@@ -345,6 +382,7 @@ Rule:
 - DOMAIN-SUFFIX,suning.com,Domestic
 - DOMAIN-SUFFIX,taobao.com,Domestic
 - DOMAIN-SUFFIX,tenpay.com,Domestic
+- DOMAIN-SUFFIX,tianyancha.com,Domestic
 - DOMAIN-SUFFIX,tmall.com,Domestic
 - DOMAIN-SUFFIX,tudou.com,Domestic
 - DOMAIN-SUFFIX,umetrip.com,Domestic
@@ -694,12 +732,12 @@ Rule:
 
 # LAN
 - DOMAIN-SUFFIX,local,DIRECT
-- IP-CIDR,127.0.0.0/8,DIRECT
-- IP-CIDR,172.16.0.0/12,DIRECT
-- IP-CIDR,192.168.0.0/16,DIRECT
 - IP-CIDR,10.0.0.0/8,DIRECT
 - IP-CIDR,17.0.0.0/8,DIRECT
 - IP-CIDR,100.64.0.0/10,DIRECT
+- IP-CIDR,127.0.0.0/8,DIRECT
+- IP-CIDR,172.16.0.0/12,DIRECT
+- IP-CIDR,192.168.0.0/16,DIRECT
 
 # 最终规则
 - GEOIP,CN,Domestic
