--- a/QuantumultX/QuantumultX.conf
+++ b/QuantumultX/QuantumultX.conf
@@ -1,21 +1,27 @@
-; 该文件基于 Quantumult X 1.0.0(113) 版本制作，因该工具尚处于测试阶段，不保证其他版本完全适用。
-; 2019年09月19日 19:07 UTC/GMT +9
+# 该文件基于 Quantumult X 1.0.1 正式版制作。
+#
+# 2019年10月26日 18:35 UTC/GMT +9
+#
+# Quantumult 使用 HTTP HEAD 方法对测试网址（server_check_url）进行网页响应性测试（测试结果为通过该节点访问此网页获得响应所需要的时间），来确认节点的可用性。
+# Quantumult 界面中的延迟测试方式均为网页响应性测试，显示的最终延迟均为通过对应节点访问测试网页获得响应所需要时间。
+
 [general]
 server_check_url=http://www.gstatic.com/generate_204
 network_check_url=http://bing.com/
 ;geo_location_checker=http://ip-api.com/json/?lang=zh-CN, https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/IP_API.js
-; 如需识别节点为中文和显示国旗，请取消上面 geo_location_checker 前的 ; 备注
+# 如需识别节点为中文和显示国旗，请取消上面 geo_location_checker 前的 ; 备注
 ;dns_exclusion_list=*.qq.com, qq.com
 ;ssid_suspended_list=Sophisticated, Sophisticated
 ;udp_whitelist=53, 123, 1900, 80-443
 ;excluded_routes= 192.168.0.0/16, 172.16.0.0/12, 100.64.0.0/10, 10.0.0.0/8
+;icmp_auto_reply=true
 
 [dns]
 server=8.8.8.8
 server=1.0.0.1
 server=114.114.114.114
-server=223.5.5.5
 server=119.29.29.29
+server=223.5.5.5
 ;server=8.8.4.4:53
 ;server=/example1.com/8.8.4.4
 ;server=/*.example2.com/223.5.5.5
@@ -24,8 +30,8 @@ server=119.29.29.29
 ;address=/example6.com/[2001:8d3:8d3:8d3:8d3:8d3:8d3:8d3]
 
 [policy]
-; 请自行在策略组添加需要加入的节点，亦可直接通过选择自带 PROXY 策略节点使用
-; 其中 CMedia 策略组为中国媒体，GMedia 为国际媒体，Microsoft 包含微软全部服务，Outside 为境外链接，Mainland 为大陆链接，Others 为最终规则
+# 请自行在策略组添加需要加入的节点，亦可直接通过选择自带 PROXY 策略节点使用
+# 其中 CMedia 策略组为中国媒体，GMedia 为国际媒体，Outside 为境外链接，Mainland 为大陆链接，Others 为最终规则
 static=AdBlock, reject, direct, img-url=https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/IconSet/AdBlock.png
 static=Apple, direct, Outside, img-url=https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/IconSet/Apple.png
 static=CMedia, direct, proxy, img-url=https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/IconSet/CMedia.png
@@ -38,11 +44,11 @@ static=Outside, proxy, direct, img-url=https://raw.githubusercontent.com/GeQ1an/
 static=Mainland, direct, proxy, img-url=https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/IconSet/Mainland.png
 static=Speedtest, Outside, direct, img-url=https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/IconSet/Speedtest.png
 static=Others, Outside, direct, img-url=https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/IconSet/Others.png
-; static 策略是静态策略，需要手动选择节点
-; available 策略是可用性策略，将会自动使用策略组内第一个可联通的节点（在触发策略时启动 URL 测试）
-; round-robbin 策略是负载均衡策略，会轮询对每个节点进行测试，下一个链接使用最优节点（不推荐使用，可能出现 IP 频繁变动，导致风险）
-; ssid 策略是适用于 WiFi SSID 激活的策略（如家里的 WiFi 网络本身就有翻墙，可以设置连接该 WiFi 时全局使用直连）
-;
+
+# static 策略是静态策略，需要手动选择节点
+# available 策略是可用性策略，将会自动使用策略组内第一个可联通的节点（在触发策略时启动 URL 测试）
+# round-robbin 策略是负载均衡策略，会轮询对每个节点进行测试，下一个链接使用最优节点（不推荐使用，可能出现 IP 频繁变动，导致风险）
+# ssid 策略是适用于 WiFi SSID 激活的策略（如家里的 WiFi 网络本身就有翻墙，可以设置连接该 WiFi 时全局使用直连）
 ;static=policy-name-1, Sample-A, Sample-B, Sample-C
 ;available=policy-name-2, Sample-A, Sample-B, Sample-C
 ;round-robbin=policy-name-3, Sample-A, Sample-B, Sample-C
