--- a/QuantumultX/QuantumultX.conf
+++ b/QuantumultX/QuantumultX.conf
@@ -1,6 +1,6 @@
-# 该文件基于 Quantumult X 1.0.1 正式版制作。
+# 该文件基于 Quantumult X 1.0.2 正式版制作。
 #
-# 2019年10月26日 18:35 UTC/GMT +9
+# 2019年11月01日 00:48 UTC/GMT +9
 #
 # Quantumult 使用 HTTP HEAD 方法对测试网址（server_check_url）进行网页响应性测试（测试结果为通过该节点访问此网页获得响应所需要的时间），来确认节点的可用性。
 # Quantumult 界面中的延迟测试方式均为网页响应性测试，显示的最终延迟均为通过对应节点访问测试网页获得响应所需要时间。
@@ -46,7 +46,7 @@ static=Speedtest, Outside, direct, img-url=https://raw.githubusercontent.com/GeQ
 static=Others, Outside, direct, img-url=https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/IconSet/Others.png
 
 # static 策略是静态策略，需要手动选择节点
-# available 策略是可用性策略，将会自动使用策略组内第一个可联通的节点（在触发策略时启动 URL 测试）
+# available 策略是健康检查策略，将会自动使用策略组内第一个可联通的节点（在触发策略时启动 URL 测试）
 # round-robbin 策略是负载均衡策略，会轮询对每个节点进行测试，下一个链接使用最优节点（不推荐使用，可能出现 IP 频繁变动，导致风险）
 # ssid 策略是适用于 WiFi SSID 激活的策略（如家里的 WiFi 网络本身就有翻墙，可以设置连接该 WiFi 时全局使用直连）
 ;static=policy-name-1, Sample-A, Sample-B, Sample-C
@@ -85,7 +85,7 @@ final, Others
 (?<=(carrier|account|sys)_region=)CN url 307 KR
 
 [mitm]
-; 请在正式使用前将其他已信任证书的密码及 P12 填入下方，或前往设置界面生成、安装并信任证书
+# 请在正式使用前将其他已信任证书的密码及 P12 填入下方，或前往设置界面生成、安装并信任证书
 passphrase =
 p12 =
 hostname = api*.tiktokv.com, api*.musical.ly, api*.amemv.com, aweme*.snssdk.com
