--- a/QuantumultX/QuantumultX.conf
+++ b/QuantumultX/QuantumultX.conf
@@ -1,6 +1,6 @@
 # 该文件基于 Quantumult X 1.0.2 正式版制作。
 #
-# 2019年11月01日 00:48 UTC/GMT +9
+# 2019年11月13日 14:51 UTC/GMT +9
 #
 # Quantumult 使用 HTTP HEAD 方法对测试网址（server_check_url）进行网页响应性测试（测试结果为通过该节点访问此网页获得响应所需要的时间），来确认节点的可用性。
 # Quantumult 界面中的延迟测试方式均为网页响应性测试，显示的最终延迟均为通过对应节点访问测试网页获得响应所需要时间。
@@ -8,17 +8,19 @@
 [general]
 server_check_url=http://www.gstatic.com/generate_204
 network_check_url=http://bing.com/
+# 如需识别节点为中文和显示国旗，请取消下面 geo_location_checker 前的 ; 备注
 ;geo_location_checker=http://ip-api.com/json/?lang=zh-CN, https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/IP_API.js
-# 如需识别节点为中文和显示国旗，请取消上面 geo_location_checker 前的 ; 备注
 ;dns_exclusion_list=*.qq.com, qq.com
+# 指定在某个 WiFi 下暂停 Quantumult X
 ;ssid_suspended_list=Sophisticated, Sophisticated
 ;udp_whitelist=53, 123, 1900, 80-443
-;excluded_routes= 192.168.0.0/16, 172.16.0.0/12, 100.64.0.0/10, 10.0.0.0/8
+excluded_routes= 192.168.0.0/16, 172.16.0.0/12, 127.0.0.0/8, 100.64.0.0/10, 17.0.0.0/8, 10.0.0.0/8
 ;icmp_auto_reply=true
 
 [dns]
-server=8.8.8.8
+# 如果只在中国大陆境内使用，可以删除 1.0.0.1 和 8.8.8.8 两行 DNS（推荐）
 server=1.0.0.1
+server=8.8.8.8
 server=114.114.114.114
 server=119.29.29.29
 server=223.5.5.5
@@ -48,7 +50,7 @@ static=Others, Outside, direct, img-url=https://raw.githubusercontent.com/GeQ1an
 # static 策略是静态策略，需要手动选择节点
 # available 策略是健康检查策略，将会自动使用策略组内第一个可联通的节点（在触发策略时启动 URL 测试）
 # round-robbin 策略是负载均衡策略，会轮询对每个节点进行测试，下一个链接使用最优节点（不推荐使用，可能出现 IP 频繁变动，导致风险）
-# ssid 策略是适用于 WiFi SSID 激活的策略（如家里的 WiFi 网络本身就有翻墙，可以设置连接该 WiFi 时全局使用直连）
+# ssid 策略是适用于 WiFi SSID 激活的策略（如家里的 WiFi 网络本身就有翻墙，可以通过 ssid 策略设置连接该 WiFi 时使用直连）
 ;static=policy-name-1, Sample-A, Sample-B, Sample-C
 ;available=policy-name-2, Sample-A, Sample-B, Sample-C
 ;round-robbin=policy-name-3, Sample-A, Sample-B, Sample-C
@@ -69,16 +71,22 @@ https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/PayPal.
 https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/Outside.list, tag=Outside (Stick Rules), enabled=true
 https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/Mainland.list, tag=Mainland (Stick Rules), enabled=true
 https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/Speedtest.list, tag=Speedtest (Stick Rules), enabled=true
-https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/LAN.list, tag=LAN (Stick Rules), enabled=true
 
 [rewrite_remote]
 https://raw.githubusercontent.com/ConnersHua/Profiles/master/Quantumult/X/Rewrite.conf, tag=Rewrite (ConnersHua), enabled=true
-http://cloudcompute.lbyczf.com/quanx-rewrite, tag=Rewrite (lhie1), enabled=false
 
 [server_local]
 
 
 [filter_local]
+host-suffix, local, direct
+ip-cidr, 10.0.0.0/8, direct
+ip-cidr, 17.0.0.0/8, direct
+ip-cidr, 100.64.0.0/10, direct
+ip-cidr, 127.0.0.0/8, direct
+ip-cidr, 172.16.0.0/12, direct
+ip-cidr, 192.168.0.0/16, direct
+geoip, cn, Mainland
 final, Others
 
 [rewrite_local]
