--- a/QuantumultX/Sample/Sample_DlerCloud.conf
+++ b/QuantumultX/Sample/Sample_DlerCloud.conf
@@ -74,7 +74,7 @@ https://dler.cloud/subscribe/XXXXXX?protocols=ss&list=quantumultx&area=jp, tag=J
 https://dler.cloud/subscribe/XXXXXX?protocols=ss&list=quantumultx&area=kr, tag=Korea, as-policy=available, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Korea.png, enabled=true
 # 美国节点策略组
 https://dler.cloud/subscribe/XXXXXX?protocols=ss&list=quantumultx&area=us, tag=United States, as-policy=available, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/United_States.png, enabled=true
-# 其他节点策略组
+# 其他节点策略组（目前难以选择其他国家/地区的策略组）
 https://dler.cloud/subscribe/XXXXXX?protocols=ss&list=quantumultx&noarea=cn+hk+tw+sg+jp+kr+us, tag=Other, as-policy=static, img-url=https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/IconSet/Other.png, enabled=true
 
 [filter_remote]
